[package]
name = "transaction-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.133", features = ["derive"]}
csv = "1.1.6"
rust_decimal = { version = "1.20.0", features = ["serde-str"] }

[dev-dependencies]
rust_decimal_macros = "1.20.0"
assert_cmd = "2.0.4"